--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -4,6 +4,7 @@
 @import "../../components/Button/styles/styles.module.scss";
 @import "../../components/Accordion/styles/styles.module.scss";
 @import "../../components/Carousel/styles/styles.module.scss";
+@import "../../components/DropdownMenu/styles/styles.module.scss";
 @import "../../components/Card/styles/styles.module.scss";
 @import "../../components/Footer/styles/styles.module.scss";
 @import "../../components/Body/styles/styles.module.scss";
