🚧 Modal SearchingFastGame + UseForm hook Added custom useForm hook + New modal

--- a/src/app/dashboard/components/ModalBody/styles/styles.module.scss
+++ b/src/app/dashboard/components/ModalBody/styles/styles.module.scss
@@ -17,3 +17,16 @@
 .rankTitle {
   margin-bottom: 12px;
 }
+
+.searchingFastGameModalBody {
+  padding: 0 63px;
+  margin-bottom: 30px;
+  .searchingFastGameModalTitle {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+}
+
+.searchingFastGameDetails {
+  margin-bottom: 15px;
+}
