--- a/src/app/landing/styles/styles.scss
+++ b/src/app/landing/styles/styles.scss
@@ -1,6 +1,7 @@
 @import "./../components/FAQ/styles/styles.module.scss";
 @import "./../components/FeaturesSection/styles/styles.module.scss";
 @import "./../components/GamesSection/styles/styles.module.scss";
+@import "./../components/Header/styles/styles.module.scss";
 @import "./../components/HowToPlay/styles/styles.module.scss";
 @import "./../components/LastNewsSection/styles/styles.module.scss";
 @import "./../components/StatsSection/styles/styles.module.scss";
