--- a/src/components/DropdownMenu/styles/styles.module.scss
+++ b/src/components/DropdownMenu/styles/styles.module.scss
@@ -1,16 +1,20 @@
 .dorpdown-menu-container {
   position: absolute;
   border-radius: 5px;
-  background: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(25px);
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+}
+
+.dropdown-item-content {
 }
 
 .dropdown-menu-content {
   width: 100%;
   padding: 10px;
   z-index: 1;
-  width: 138px;
-  height: 41px;
+  min-width: 138px;
   border-radius: 5px;
   &:hover {
     background: var(--color-black-2);
