--- a/src/app/dashboard/components/ModalBody/styles/styles.module.scss
+++ b/src/app/dashboard/components/ModalBody/styles/styles.module.scss
@@ -30,3 +30,12 @@
 .searchingFastGameDetails {
   margin-bottom: 15px;
 }
+
+@media screen and (max-width: "840px") {
+  .fastGameModalBody {
+    padding: 0;
+  }
+  .addGameModalBody {
+    padding: 0;
+  }
+}
