--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,7 +6,7 @@
 }
 
 .pageBody {
-  padding-top: 140px;
+  padding-top: 60px;
 }
 
 .hr-line {
@@ -31,6 +31,6 @@
 
 @media screen and (max-width: 1110px) {
   .pageBody {
-    padding-top: 60px;
+    // padding-top: 60px;
   }
 }
