--- a/src/styles/components/styles.scss
+++ b/src/styles/components/styles.scss
@@ -11,6 +11,7 @@
 @import "../../components/RadioGroup/styles/styles.module.scss";
 @import "../../components/Select/styles/styles.module.scss";
 @import "../../components/Tag/styles/styles.module.scss";
+@import "../../components/UserImage/styles/styles.module.scss";
 
 .input-1 {
   background-color: var(--color-black-1);
