--- a/src/components/Input/styles/styles.module.scss
+++ b/src/components/Input/styles/styles.module.scss
@@ -20,7 +20,18 @@
   }
 }
 
-input[type="number"]::-webkit-inner-spin-button {
+.textarea {
+  overflow-wrap: break-word;
+  padding: 20px 72px 20px 20px;
+  height: 250px;
+  line-height: 150%;
+  &::placeholder {
+    color: var(--color-black-6);
+    line-height: 150%;
+  }
+}
+
+input[type='number']::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
@@ -41,7 +52,7 @@ input[type="number"]::-webkit-inner-spin-button {
   color: #999999;
 }
 
-input[type="date"]::-webkit-calendar-picker-indicator {
+input[type='date']::-webkit-calendar-picker-indicator {
   filter: invert(1); /* Inverte a cor do ícone */
   transform: scale(1.3); /* Aumenta o ícone */
 }
