--- a/src/components/Input/styles/styles.module.scss
+++ b/src/components/Input/styles/styles.module.scss
@@ -20,6 +20,10 @@
   }
 }
 
+.input-search {
+  padding: 20px 40px;
+}
+
 .textarea {
   overflow-wrap: break-word;
   padding: 20px 72px 20px 20px;
@@ -29,10 +33,6 @@
     color: var(--color-black-6);
     line-height: 150%;
   }
-}
-
-input[type='number']::-webkit-inner-spin-button {
-  -webkit-appearance: none;
 }
 
 .toggle-password-btn {
@@ -55,4 +55,13 @@ input[type='number']::-webkit-inner-spin-button {
 input[type='date']::-webkit-calendar-picker-indicator {
   filter: invert(1); /* Inverte a cor do ícone */
   transform: scale(1.3); /* Aumenta o ícone */
+}
+
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+input[type='search']::-webkit-search-cancel-button {
+  filter: brightness(100);
+  cursor: pointer;
 }
