✨ Challenge Sent High fidelity layout

--- a/src/app/challenges/styles/styles.scss
+++ b/src/app/challenges/styles/styles.scss
@@ -1,1 +1,1 @@
-@import "../components/FollowingCard/styles/styles.module.scss";
+@import '../components/ReceivedChallengesCard/styles/styles.module.scss';
