--- a/src/styles/app/styles.scss
+++ b/src/styles/app/styles.scss
@@ -1,4 +1,5 @@
-@import "../../app/landing/styles/styles.scss";
-@import "../../app/dashboard/styles/styles.scss";
-@import "../../app/challenge/styles/styles.scss";
-@import "../../app/challenges/styles/styles.scss";
+@import '../../app/challenge/styles/styles.scss';
+@import '../../app/challenges/styles/styles.scss';
+@import '../../app/dashboard/styles/styles.scss';
+@import '../../app/landing/styles/styles.scss';
+@import '../../app/welcome/styles/styles.scss';
