--- a/src/components/Input/styles/styles.module.scss
+++ b/src/components/Input/styles/styles.module.scss
@@ -7,6 +7,7 @@
   background-color: var(--color-black-2);
   border-radius: 5px;
   position: relative;
+  color: var(--color-black-8);
   &:hover {
     background: var(--color-black-3);
   }
@@ -50,6 +51,27 @@
 
 .toggle-password-btn.show {
   color: #999999;
+}
+
+.styled-label {
+  position: absolute;
+  left: 20px;
+  top: 8px;
+  z-index: 100;
+  font-size: var(--text-size-small);
+  color: var(--color-black-6);
+}
+
+.input-styled-label {
+  padding: 30px 30px 10px 20px;
+}
+
+.input-error {
+  color: var(--color-error);
+}
+
+.input-error-container {
+  border: 1px solid var(--color-error);
 }
 
 input[type='date']::-webkit-calendar-picker-indicator {
