--- a/src/components/Button/styles/styles.module.scss
+++ b/src/components/Button/styles/styles.module.scss
@@ -61,20 +61,9 @@
   width: 100%;
 }
 
-//outline
-.button-outline {
-  background: var(---button-backgroundColor-outline);
-  border: 1px solid #ffffff;
-  &:hover {
-    background: var(---button-backgroundColor-outline-hover);
-  }
-  &:active {
-    background: var(---button-backgroundColor-outline-active);
-  }
-}
-
 //primary
 .button-primary {
+  transition: all 0.3s ease;
   transform: skew(0) !important;
   border-radius: 5px;
   background: var(--button-backgroundColor-primary);
@@ -97,6 +86,7 @@
 }
 
 .button-primaryOutline {
+  transition: all 0.3s ease;
   transform: skew(0) !important;
   border-radius: 5px;
   background: var(---button-backgroundColor-outline);
@@ -122,6 +112,7 @@
 
 //secondary
 .button-secondary {
+  transition: all 0.3s ease;
   background: transparent;
   font-weight: 400;
   &:hover {
@@ -135,6 +126,51 @@
   }
 }
 
+//tertiary
+.button-tertiary {
+  font-size: var(--text-size-small);
+  cursor: pointer;
+  &:hover {
+    font-weight: 500;
+  }
+  &:active {
+    font-weight: 400;
+    color: var(--color-black-5);
+  }
+}
+
+//outline
+.button-outline {
+  transition: all 0.3s ease;
+  background: var(---button-backgroundColor-outline);
+  border: 1px solid #ffffff;
+  &:hover {
+    background: var(---button-backgroundColor-outline-hover);
+  }
+  &:active {
+    background: var(---button-backgroundColor-outline-active);
+  }
+  &:disabled {
+    border-color: var(--color-black-3);
+    background: transparent;
+    cursor: not-allowed;
+    div {
+      color: var(--color-black-3);
+    }
+  }
+}
+
+//Selected
+.button-selected {
+  background-color: var(--color-black-1);
+  border: 1px solid var(--color-black-1);
+  cursor: auto;
+}
+
+//Standard
+.button-standard {
+  transition: all 0.3s ease;
+}
 .button-size-standard {
   height: 60px;
   font-size: 16px;
