--- a/src/styles/config/base.scss
+++ b/src/styles/config/base.scss
@@ -374,6 +374,10 @@ body {
   text-align: center;
 }
 
+.text-start {
+  text-align: start;
+}
+
 .h1-400 {
   font-size: var(--text-size-h1);
   font-weight: var(--text-weight-regular);
