--- a/src/styles/app/styles.scss
+++ b/src/styles/app/styles.scss
@@ -1,3 +1,4 @@
+@import '../../app/active-games/styles/styles.scss';
 @import '../../app/challenge/styles/styles.scss';
 @import '../../app/challenges/styles/styles.scss';
 @import '../../app/dashboard/styles/styles.scss';
