--- a/src/components/Modal/styles/styles.module.scss
+++ b/src/components/Modal/styles/styles.module.scss
@@ -100,7 +100,7 @@
   }
   .modalContainer {
     .modalHeader--content {
-      padding: 0 30px 0 40px;
+      padding: 0px;
     }
     width: 100%;
     max-height: 100%;
