🐛 Fix Landing Bugs

--- a/src/app/landing/components/FeaturesSection/styles/styles.module.scss
+++ b/src/app/landing/components/FeaturesSection/styles/styles.module.scss
@@ -17,6 +17,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .landingEffect {
+    height: 100%;
+  }
   .features-section {
     display: flex;
     flex-direction: column;
