💄 Ajustes layout e unmask envio backend

--- a/src/components/Modal/styles/styles.module.scss
+++ b/src/components/Modal/styles/styles.module.scss
@@ -78,7 +78,7 @@
 .modalBodyFooterContainer {
   // padding: 20px 0;
   width: 100%;
-  background-color: var(--color-black);
+  background-color: var(--background-color);
   border-radius: 0 0 10px 10px;
   overflow: auto;
 }
