--- a/src/styles/config/variables.scss
+++ b/src/styles/config/variables.scss
@@ -46,7 +46,7 @@
   --text-weight-bold: 600;
   --text-weight-extrabold: 700;
 
-  --background-color: var(--color-black);
+  --background-color: #0e0e0f;
   --header-background-color: var(--color-black1);
 
   --button-backgroundColor-primary: var(--color-primary-2);
