--- a/src/components/Modal/styles/styles.module.scss
+++ b/src/components/Modal/styles/styles.module.scss
@@ -31,7 +31,7 @@
   width: 100%;
   padding: 0 30px 0 40px;
   border-radius: 10px 10px 0 0;
-  background-color: var(--color-black);
+  background-color: var(--background-color);
   transition: opacity ease 0.3s, transform ease 0.3s;
 
   .buttonRoundEffect {
