--- a/src/styles/config/base.scss
+++ b/src/styles/config/base.scss
@@ -247,6 +247,21 @@ body {
 }
 
 // Padding
+.p-1 {
+  padding: 1rem;
+}
+.p-2 {
+  padding: 2rem;
+}
+.p-3 {
+  padding: 3rem;
+}
+.p-4 {
+  padding: 4rem;
+}
+.p-5 {
+  padding: 5rem;
+}
 .pt-5 {
   padding-top: 5rem;
 }
