--- a/src/components/Input/styles/styles.module.scss
+++ b/src/components/Input/styles/styles.module.scss
@@ -74,6 +74,25 @@
   border: 1px solid var(--color-error);
 }
 
+.file-upload .upload-btn {
+  background-color: var(--color-black-2);
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.file-upload .upload-btn:hover {
+  background-color: var(--color-black-1);
+}
+
+.input-file-button {
+  padding: 16px 10px;
+  background-color: var(--color-black-3);
+  border-radius: 5px;
+}
+
 input[type='date']::-webkit-calendar-picker-indicator {
   filter: invert(1); /* Inverte a cor do ícone */
   transform: scale(1.3); /* Aumenta o ícone */
