--- a/src/components/SearchInput/styles/styles.module.scss
+++ b/src/components/SearchInput/styles/styles.module.scss
@@ -27,3 +27,7 @@
 .datalist-recomendations {
   transition: all 0.3s ease-in-out;
 }
+.scrollable-container {
+  max-height: 245px;
+  overflow-y: auto;
+}
